cluster/infra/observability/victoria-logs/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-server
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'logs.talos.${DOMAIN_NAME}' ]
  parentRefs:
    - name: envoy
      namespace: envoy-system

  rules:
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/
            statusCode: 302

    - backendRefs:
        - name: victoria-logs-server
          port: 9428
